--- a/package.json
+++ b/package.json
@@ -9,13 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.2",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
+    "@sanity/client": "^4.0.1",
+    "@sanity/image-url": "^1.0.2",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "i": "^0.3.7",
+    "nativewind": "^2.0.11",
+    "npm": "^9.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-web": "~0.18.9",
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "tailwindcss": "^3.2.6"
   },
   "private": true
 }
